--- a/blog-testing/src/App.css
+++ b/blog-testing/src/App.css
@@ -1,19 +1,19 @@
-.App {
+.blog {
   text-align: center;
 }
 
-.App-logo {
+.blog-logo {
   height: 40vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .blog-logo {
+    animation: blog-logo-spin infinite 20s linear;
   }
 }
 
-.App-header {
+.Blog-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -24,11 +24,11 @@
   color: white;
 }
 
-.App-link {
+.blog-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+@keyframes blog-logo-spin {
   from {
     transform: rotate(0deg);
   }
