--- a/blog-testing/src/App.css
+++ b/blog-testing/src/App.css
@@ -1,9 +1,9 @@
-.blog {
+.Blog {
   text-align: center;
 }
 
 .blog-logo {
-  height: 40vmin;
+  height: min-content;
   pointer-events: none;
 }
 
@@ -35,4 +35,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.promo-section {
+  text-align: center;
 }
